# hackai2023athon

./: README.md  sportsDataset.ipynb
.github/workflows/: build.yml
FridgeDataset/: workspace.xcf
backend/: Dockerfile  app.py  dev.sh  pyproject.toml  respell.py
computerVision/: captureScreen.ipynb
computerVision/AWS-training/SageMaker/: Endpoint-Lambda.ipynb  Retrain.ipynb
computerVision/AWS-training/SageMaker/.ipynb_checkpoints/: Retrain-checkpoint.ipynb
computerVision/FridgeDataset/: formatDataset.ipynb  generateFridgePlacement.ipynb  workspace.xcf
computerVision/FridgeDataset/fridgeDatasetYOLO/: README.dataset.txt  README.roboflow.txt  data.yaml
computerVision/FridgeDataset/fridgeDatasetYOLO/test/labels/: arrange14_png.rf.98eaed3fbff5933703fb27135e81e651.txt  arrange3_png.rf.3c160858f7c3fdb9f86193613c4e94cb.txt
computerVision/FridgeDataset/fridgeDatasetYOLO/train/labels/: arrange11_png.rf.56de38d530b5c033462fb0de86cb13d6Copy2CopyCopy.txt  arrange11_png.rf.f87623a5ca2d65acb367caf91b4b3d9fCopyCopy2CopyCopy.txt  arrange13_png.rf.51af566fe56a59f88d2f5938e9dddff1CopyCopy2CopyCopy.txt  arrange13_png.rf.793bed993f5e36ee997c7e00f4610b27Copy5.txt  arrange15_png.rf.4052f6f9a9dfd073da42c55ff4013f2fCopy2Copy.txt  arrange15_png.rf.df60964d0da08818b1c49cc67861e18bCopy3Copy.txt  arrange16_png.rf.a20f0f09a298e91bf275434b5f5fc639Copy3CopyCopy.txt  arrange17_png.rf.b281bb773b2f5f72aad4dd5ec7979575Copy4.txt  (+14 more)
deploy/: Dockerfile
frontend/: App.js  package-lock.json  package.json
frontend/components/: FilterButton.js  ItemList.js
frontend/pages/: Home.js  Recipe.js
(+5 files in other folders)
