[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
requests = "^2.28.2"
python-dotenv = "^1.0.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
boto3 = "^1.26.114"
opencv-python = "^4.7.0.72"
sagemaker = "^2.146.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
